[package]
name = "rust-website"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
log = "0.4.*"
env_logger = "0.11.*"
actix-web = "4.10.*"
tokio = { version = "1.*", features = ["full"] }
actix-files = "0.6.*"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
chrono = "0.4.*"
buttplug = "9.*"