[package]
name = "rust-website"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
log = "0.4.*"
env_logger = "0.11.*"
actix = "0.13"
actix-web = "4.10.*"
actix-web-actors = "4.2"
actix-files = "0.6.*"
tokio = { version = "1.*", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
chrono = "0.4.*"
buttplug = "9.*"
futures = "0.3.*"
async-std = "1.*"
once_cell = "1.*"
atomic_float = "1.*"
rusqlite = { version = "0.29", features = ["bundled"] }
walkdir = "2"